--- a/Epidata_Proposal.qmd
+++ b/Epidata_Proposal.qmd
@@ -21,7 +21,7 @@ Use data visualizations to explore, compare and analyze several historically wel
 
 ## Goal Description
 
-The main goal of this project is to dive deeper into some significant pandemics from human history, including Yellow Fever Epidemic, Smallpox Epidemic, 1918 Influenza Pandemic, H1N1 Influenza and COVID-19. We are aware, to some extent, of the fact that these pandemics caused great loss and profoundly impacted human society in numerous ways. However, we want to use data visualizations to visually present and explore the similarities and differences among these pandemics that happened in different time periods. How fast did the infection spread? What were the mortality rates? Were there seasonal patterns? How were the economic impacted by these pandemics at the time? How long after news reported the disease did the pandemic outbreaks happen on a large scale? These are some potential questions we could explore in this project.
+The main goal of this project is to dive deeper into some significant pandemics from human history, including Cholera, Dengue, and COVID-19. We are aware, to some extent, of the fact that these pandemics or diseases caused great loss and profoundly impacted human society in numerous ways. However, we want to use data visualizations to visually present and explore the similarities and differences among these pandemics or diseases that happened in large scale in different time periods. How fast did the infection spread? What were the mortality rates? Were there seasonal patterns? How were the economic impacted by these pandemics at the time? How long after news reported the disease did the pandemic outbreaks happen on a large scale? These are some potential questions we could explore in this project.
 
 Here are some proposed tasks that we plan to implement in this project:
 
@@ -31,12 +31,12 @@ Here are some proposed tasks that we plan to implement in this project:
 
 -   (Task 3) Explore the time difference between when the news or articles discussed about the pandemic came out and when the pandemic outbreaks actually happened in larger scale. This step will only apply to those pandemics in modern days when there were recorded news media.
 
--   (Task 4) For each pandemic, we will use a radar chart to present the pandemic variables, such as incubation period, mortality rate, and illness duration. We could understand the differences in the conditions among different pandemics.
+-   (Task 4) For each pandemic, we will use a radar chart to present the pandemic variables, such as incubation period, mortality rate, and illness duration, etc. We could understand the differences in the conditions among different pandemics.
 
 ## Weekly Schedule
 
 | Task Name                              | Status   | Assignee                   | Due   | Priority | Summary                                            |
-|-------------|------------|------------|------------|------------|------------|
+|------------|------------|------------|------------|------------|------------|
 | Proposal                               | Finished | Yitian, Li, Meghana, Rohit | 11/10 | Done     | Finish proposal and upload to GitHub repo          |
 | Peer review for proposal               | To do    | Yitian, Li, Meghana, Rohit | 11/13 | High     | Do peer review in class                            |
 | Revised proposal for instructor review | To do    | Yitian, Li, Meghana, Rohit | 11/18 | High     | Revise proposal according to peer review feedbacks |
