--- a/Epidata_Proposal.qmd
+++ b/Epidata_Proposal.qmd
@@ -17,44 +17,74 @@ execute:
 library(tidyverse)
 ```
 
+## Project Title: A Comparative Analysis of Historical Pandemics through Data Visualization
+
 Use data visualizations to explore, compare and analyze several historically well-known pandemics.
 
 ## Goal Description
 
 The main goal of this project is to dive deeper into some significant pandemics from human history, including Cholera, Dengue, and COVID-19. We are aware, to some extent, of the fact that these pandemics or diseases caused great loss and profoundly impacted human society in numerous ways. However, we want to use data visualizations to visually present and explore the similarities and differences among these pandemics or diseases that happened in large scale in different time periods. How fast did the infection spread? What were the mortality rates? Were there seasonal patterns? How were the economic impacted by these pandemics at the time? How long after news reported the disease did the pandemic outbreaks happen on a large scale? These are some potential questions we could explore in this project.
 
-Here are some proposed tasks that we plan to implement in this project:
+## Research Questions and Expected Visualizations
 
--   (Task 1) For each pandemic, we will use a stream graph to plot infected counts and death counts with time. The infected counts will be the upper part and the death counts will be the lower part, with x-axis being the timeline. We could see how fatal the disease was at that time.
+-   Question 1: How did infection and mortality rates change over time for each pandemic?
 
--   (Task 2) For each pandemic, we will use R to create a Shiny app to implement a slidebar to slide through the time period affected by this pandemic, with each specific time corresponding to a heatmap that depicts the infected areas in the world map. We could therefore visualize the geographical spread of the pandemic as time went by.
+    -   Visualization: For each pandemic, we will use a stream graph to plot infected counts and death counts with time. The infected counts will be the upper part and the death counts will be the lower part, with x-axis being the timeline. We could see how fatal the disease was at that time.
 
--   (Task 3) Explore the time difference between when the news or articles discussed about the pandemic came out and when the pandemic outbreaks actually happened in larger scale. This step will only apply to those pandemics in modern days when there were recorded news media.
+    -   Reason: This visual will highlight each pandemic's scale and fatality over time, making it easy to see trends and compare severity across pandemics.
 
--   (Task 4) For each pandemic, we will use a radar chart to present the pandemic variables, such as incubation period, mortality rate, and illness duration, etc. We could understand the differences in the conditions among different pandemics.
+-   Question 2: How did each pandemic spread geographically over time?
+
+    -   Visualization: For each pandemic, we will use R to create a Shiny app to implement a slidebar to slide through the time period affected by this pandemic, with each specific time corresponding to a heatmap that depicts the infected areas in the world map. We could therefore visualize the geographical spread of the pandemic as time went by.
+
+    -   Reason: This allows us to visualize the pace and direction of each pandemic’s spread globally, helping us understand geographical reach and potential containment challenges.
+
+-   Question 3: Did news reports have any impact on the disease growth rates?
+
+    -   Visualization: Use time series to see the disease growth rate and use scatter plot to understand the changes in disease growth rate before and after news reports. This step will only apply to those pandemics in modern days when there were recorded news media.
+
+    -   Reason: This comparison can reveal the role of media in public awareness and response, helping assess if early media coverage affected outbreak management.
+
+-   Question 4: What are the differences in incubation period, mortality rate, and illness duration across pandemics?
+
+    -   Visualization: For each pandemic, we will use a radar chart to present the pandemic variables, such as incubation period, mortality rate, and illness duration, etc. We could understand the differences in the conditions among different pandemics.
+
+    -   Reason: Radar charts provide a clear, at-a-glance comparison of key factors, offering insight into each pandemic's unique characteristics and public health challenges.
 
 ## Data Collection/Manipulation
 
 ### Data Sources
 
-The datasets focus on three major disease outbreaks—COVID-19, Cholera, and Dengue Fever—that have had profound impacts on public health, societal norms, and the global economy. The [COVID-19 dataset](https://data.who.int/dashboards/covid19/data) provides daily reported cases and deaths at the country level from January 4, 2020, to September 22, 2024, offering a detailed timeline of the pandemic’s progression across regions. The [Cholera dataset](https://worldhealthorg.shinyapps.io/page10cholera_data/) includes annual country-level data on cases, mortality, and incidence rates from 2000 to 2023, with key columns such as Country, Region, Year, Total Cases, Deaths, and Case Fatality Rate (CFR). The [Dengue Fever dataset](https://worldhealthorg.shinyapps.io/dengue_global/) contains monthly case data by country from January 1, 2010, to September 1, 2024, capturing metrics on severe cases, deaths, and fatality rates, and providing information across multiple dimensions, including date, region, country, and case severity. While these WHO-sourced datasets are generally reliable, they come with limitations that may impact analyses, such as underreporting in areas with limited healthcare infrastructure and inconsistencies in case definitions and reporting practices across countries. The temporal resolution also varies—some datasets are aggregated annually, others monthly or daily—requiring harmonization in subsequent processing to ensure consistency in analyses.
+The datasets focus on three major disease outbreaks—COVID-19, Cholera, and Dengue Fever—that have had profound impacts on public health, societal norms, and the global economy.
+
+The [COVID-19 dataset](https://data.who.int/dashboards/covid19/data) provides daily reported cases and deaths at the country level from January 4, 2020, to September 22, 2024, offering a detailed timeline of the pandemic’s progression across regions.
+
+The [Cholera dataset](https://worldhealthorg.shinyapps.io/page10cholera_data/) includes annual country-level data on cases, mortality, and incidence rates from 2000 to 2023, with key columns such as Country, Region, Year, Total Cases, Deaths, and Case Fatality Rate (CFR).
+
+The [Dengue Fever dataset](https://worldhealthorg.shinyapps.io/dengue_global/) contains monthly case data by country from January 1, 2010, to September 1, 2024, capturing metrics on severe cases, deaths, and fatality rates, and providing information across multiple dimensions, including date, region, country, and case severity.
+
+While these WHO-sourced datasets are generally reliable, they come with limitations that may impact analyses, such as under-reporting in areas with limited healthcare infrastructure and inconsistencies in case definitions and reporting practices across countries. The temporal resolution also varies—some datasets are aggregated annually, others monthly or daily—requiring harmonization in subsequent processing to ensure consistency in analyses.
+
+### Data Cleaning
+
+We will be handling missing data and rename columns in all three datasets to follow a consistent format. We will modify the values of time columns to be in the year-month-date format. We will segment the time periods as required.
 
 ## Weekly Schedule
 
-| Task Name                              | Status   | Assignee                   | Due   | Priority | Summary                                            |
+| Task Name | Status | Assignee | Due | Priority | Summary |
 |------------|------------|------------|------------|------------|------------|
-| Proposal                               | Finished | Yitian, Li, Meghana, Rohit | 11/10 | Done     | Finish proposal and upload to GitHub repo          |
-| Peer review for proposal               | To do    | Yitian, Li, Meghana, Rohit | 11/13 | High     | Do peer review in class                            |
-| Revised proposal for instructor review | To do    | Yitian, Li, Meghana, Rohit | 11/18 | High     | Revise proposal according to peer review feedbacks |
-| Task 1                                 | To do    | Yitian                     | 11/24 | Medium   | Finish task 1                                      |
-| Task 2                                 | To do    | Meghana                    | 11/24 | Medium   | Finish task 2                                      |
-| Task 3                                 | To do    | Li                         | 11/24 | Medium   | Finish task 3                                      |
-| Task 4                                 | To do    | Rohit                      | 11/24 | Medium   | Finish task 4                                      |
-| Poster                                 | To do    | Yitian, Li, Meghana, Rohit | 11/30 | Low      | Finish design poster for iShowcase presentation    |
-| Peer review for poster                 | To do    | Yitian, Li, Meghana, Rohit | 12/4  | Low      | Do peer review in class                            |
-| Presentation slides                    | To do    | Yitian, Li, Meghana, Rohit | 12/6  | Low      | Finish writing the slides for presentation         |
-| iShowcase presentation                 | To do    | Yitian, Li, Meghana, Rohit | 12/11 | Low      | Do iShowcase presentation                          |
-| Write-up                               | To do    | Yitian, Li, Meghana, Rohit | 12/13 | Low      | Finish write-up                                    |
+| Proposal | Finished | Yitian, Li, Meghana, Rohit | 11/10 | Done | Finish proposal and upload to GitHub repo |
+| Peer review for proposal | To do | Yitian, Li, Meghana, Rohit | 11/13 | High | Do peer review in class |
+| Revised proposal for instructor review | To do | Yitian, Li, Meghana, Rohit | 11/18 | High | Revise proposal according to peer review feedbacks |
+| Task 1 | To do | Yitian | 11/24 | Medium | Finish task 1 |
+| Task 2 | To do | Meghana | 11/24 | Medium | Finish task 2 |
+| Task 3 | To do | Li | 11/24 | Medium | Finish task 3 |
+| Task 4 | To do | Rohit | 11/24 | Medium | Finish task 4 |
+| Poster | To do | Yitian, Li, Meghana, Rohit | 11/30 | Low | Finish design poster for iShowcase presentation |
+| Peer review for poster | To do | Yitian, Li, Meghana, Rohit | 12/4 | Low | Do peer review in class |
+| Presentation slides | To do | Yitian, Li, Meghana, Rohit | 12/6 | Low | Finish writing the slides for presentation |
+| iShowcase presentation | To do | Yitian, Li, Meghana, Rohit | 12/11 | Low | Do iShowcase presentation |
+| Write-up | To do | Yitian, Li, Meghana, Rohit | 12/13 | Low | Finish write-up |
 
 ## Project Repository
 
