Added code files.

--- a/extras/Q3.Rmd
+++ b/extras/Q3.Rmd
@@ -354,5 +354,11 @@ ggplot(combined_data, aes(x = Month)) +
 
 Our objective was to use time series to see the disease growth rate and understand the changes in disease growth rate before and after news reports. From September 2020 onwards, the trend of the covid-19 outbreak could be characterized by a “second wave”, especially in the introduction of tougher bordering restrictions, and the surge in the number of cases. At the same time,  several media reports also reported that it was the beginning of the second wave of the pandemic. Therefore, we chose to filter news about covid-19 through September 2020 The news data was obtained from Multidisciplinary Digital Publishing Institute (MDPI). News was collected by Web Scraper.
 
-The shaded gray rectangle is the number of news monthly news releases, while its axis corresponds to the right part of the y-axis. The red line represents the total number of covid-19 and corresponds to the left y-axis. From the graph we can see that when the number of news releases rises significantly, the growth in the total number of cases is slowing down, most notably from April to May 2020.The growth rate of the number of news releases in April 2020 is 123.81%, while the growth rate of the total number of cases is only 26.34%. Meanwhile, the number of cases increased extremely rapidly from June to July 2020, with a growth rate of 89.01%, and the growth rate of news releases from June to July was only 8.55%. This interesting phenomenon may also suggest that the number of news releases in the early stages of the pandfemic was able to affect the number of new cases of infection to some extent. 
+The gray bars and gray line display the number of monthly news articles about COVID-19, while its axis corresponds to the right y-axis. The red line represents the total cases of covid-19 and corresponds to the left y-axis. From the graph we can see that when the number of news increased significantly, the growth of new infectious cases is slowing down, most notably from April to May 2020. you can see the rate of growth in the news is significantly higher than the  new  infectious cases' growth rates. Meanwhile, the growth rate of news releases from June to July increased very slowly, so that the new infectious cases increased extremely rapidly from June to July 2020. This interesting phenomenon may also suggest that the news releases in the early stages of the pandemic was able to affect the new infectious cases  to some extent. 
+
+
+
+Reference ： https://www.cnn.com/2020/09/19/europe/europe-second-wave-coronavirus-intl/index.html
+Reference ：https://www.cbsnews.com/news/covid-cases-in-uk-surge-as-britain-and-other-european-nations-face-possible-second-lockdowns/
+Reference :https://www.sciencedirect.com/org/science/article/pii/S152614922400198X#secd5e2817 
 
